@@ -1,10 +1,8 @@
 FROM ubuntu:22.04
 LABEL maintainer="b.gamard@sismics.com"
 
-# Run Debian in non interactive mode
+# Set environment variables
 ENV DEBIAN_FRONTEND noninteractive
-
-# Configure env
 ENV LANG C.UTF-8
 ENV LC_ALL C.UTF-8
 ENV JAVA_HOME /usr/lib/jvm/java-11-openjdk-amd64/
@@ -12,42 +10,13 @@ ENV JAVA_OPTIONS -Dfile.encoding=UTF-8 -Xmx1g
 ENV JETTY_VERSION 11.0.20
 ENV JETTY_HOME /opt/jetty
 
-# Install packages
+# Install necessary packages
 RUN apt-get update && \
     apt-get -y -q --no-install-recommends install \
     vim less procps unzip wget tzdata openjdk-11-jdk \
-    ffmpeg \
-    mediainfo \
-    tesseract-ocr \
-    tesseract-ocr-ara \
-    tesseract-ocr-ces \
-    tesseract-ocr-chi-sim \
-    tesseract-ocr-chi-tra \
-    tesseract-ocr-dan \
-    tesseract-ocr-deu \
-    tesseract-ocr-fin \
-    tesseract-ocr-fra \
-    tesseract-ocr-heb \
-    tesseract-ocr-hin \
-    tesseract-ocr-hun \
-    tesseract-ocr-ita \
-    tesseract-ocr-jpn \
-    tesseract-ocr-kor \
-    tesseract-ocr-lav \
-    tesseract-ocr-nld \
-    tesseract-ocr-nor \
-    tesseract-ocr-pol \
-    tesseract-ocr-por \
-    tesseract-ocr-rus \
-    tesseract-ocr-spa \
-    tesseract-ocr-swe \
-    tesseract-ocr-tha \
-    tesseract-ocr-tur \
-    tesseract-ocr-ukr \
-    tesseract-ocr-vie \
-    tesseract-ocr-sqi \
-    && apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+    ffmpeg mediainfo tesseract-ocr \
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
+
 RUN dpkg-reconfigure -f noninteractive tzdata
 
 # Install Jetty
@@ -57,19 +26,16 @@ RUN wget -nv -O /tmp/jetty.tar.gz \
     && mv /opt/jetty* /opt/jetty \
     && useradd jetty -U -s /bin/false \
     && chown -R jetty:jetty /opt/jetty \
-    && mkdir /opt/jetty/webapps \
     && chmod +x /opt/jetty/bin/jetty.sh
 
 EXPOSE 8080
 
-# Install app
-RUN mkdir /app && \
-    cd /app && \
-    java -jar /opt/jetty/start.jar --add-modules=server,http,webapp,deploy
+# Copy the entire project directory into the Jetty webapps directory
+COPY ./docs-web/src/main/webapp/. /opt/jetty/webapps/docs/
+RUN chown -R jetty:jetty /opt/jetty/webapps/docs/
 
-ADD docs.xml /app/webapps/docs.xml
-ADD docs-web/target/docs-web-*.war /app/webapps/docs.war
+# Set working directory
+WORKDIR /opt/jetty
 
-WORKDIR /app
-
+# Start Jetty
 CMD ["java", "-jar", "/opt/jetty/start.jar"]
